--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -129,6 +129,10 @@ body {
   max-width: 114rem;
   background-color: #eee;
   margin: 0 auto; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
   .row .col-1-of-2 {
