--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -52,3 +52,28 @@
     
     }
 }
+
+.btn-text{
+    &:link,
+    &:visited {
+        font-size: $default-font-size;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+    }
+
+    &:hover{
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 2rem 3rem rgba($color-black,.4);
+        transform: translateY(-2px);
+        transition: all .2s;
+    }
+
+    &:active{
+        box-shadow: 0 1rem 1.5rem rgba($color-black,.2);
+        transform: translateY(0);
+    }   
+}
