finish section features

--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -61,7 +61,7 @@
         display: inline-block;
         text-decoration: none;
         border-bottom: 1px solid $color-primary;
-        padding: 3px;
+        padding: .6rem .4rem;
     }
 
     &:hover{
