--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -32,6 +32,14 @@
             background-color: $color-white;
         }
     }
+
+    &--green{
+        color: $color-white;
+        background-color: $color-primary;
+        &::after{
+            background-color: $color-primary;
+        }
+    }
     
     &::after{
         content: "";
