--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -30,6 +30,16 @@
             &-1{
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+
+            &-2{
+                background-image:linear-gradient(to right bottom, 
+                rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85));
+            }
+    
+            &-3{
+                background-image: linear-gradient(to right bottom, 
+                rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
+            }
         }
     }
 
@@ -53,11 +63,13 @@
         }
 
         &--2{
-            background-image: url(../img/nat-5.jpg);
+            background-image:linear-gradient(to right bottom, 
+            rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85)), url(../img/nat-6.jpg);
         }
 
         &--3{
-            background-image: url(../img/nat-5.jpg);
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-primary-light, .85), rgba($color-primary-dark, .85)), url(../img/nat-7.jpg);
         }
     }
 
@@ -81,6 +93,16 @@
         &--1{
             background-image: linear-gradient(to right bottom, 
             rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
+        }
+
+        &--2{
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85));
+        }
+
+        &--3{
+            background-image: linear-gradient(to right bottom, 
+            rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
         }
     }
 
