init stories section

--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -116,6 +116,10 @@ body {
   padding: 25rem 0 50rem;
   margin-top: -10rem; }
 
+.section-stories {
+  padding: 15rem 0;
+  background-color: #f7f7f7; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -322,6 +326,28 @@ body {
   .card__price-value {
     font-size: 6rem;
     text-transform: uppercase; }
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__img {
+    height: 100%; }
+  .story__text {
+    transform: skewX(12deg); }
 
 .header {
   height: 95vh;
