--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -24,3 +24,8 @@
     padding: 25rem 0 50rem;
     margin-top: -10rem;
 }
+
+.section-stories{
+    padding: 15rem 0;
+    background-color: $color-grey-light-1;
+}
