--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -9,6 +10,9 @@
         transition: all .2s;
         position: relative;
         font-size: 16px;
+
+        border: none;
+        cursor: pointer;
     }
 
     &:hover{
@@ -20,7 +24,8 @@
         }
     }
     
-    &:active {
+    &:active,
+    &:focus {
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
