--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -16,11 +16,14 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
+@import "components/popup";
+
 
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
 @import "layout/navigation";
+
 
 
 
