--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -13,3 +13,39 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+//MEDIA QUERY MANAGER
+
+/*
+0 - 600px; Phone
+600 - 900: tap-port
+1200-1800: tab-land
+1800px - big-desktop
+*/
+
+@mixin respond($breakpoint){
+     @if $breakpoint == phone{
+         @media (max-width: 37.5em){
+             @content
+         };
+     }
+
+    @if $breakpoint == tab-port{
+        @media (max-width: 56.25em){
+            @content
+        };
+    }
+
+    @if $breakpoint == tab-land{
+        @media (max-width: 75em){
+            @content
+        };
+    }
+
+    @if $breakpoint == big-desktop{
+        @media (min-width: 112.5em){
+            @content
+        };
+    }
+}
+
